--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Rs">\u20B9</string>
     <string name="query">For any queries contact us on support@codoc.co.in</string>
+    <string name="facebook_app_id">1611190178907568</string>
 
 </resources>
